--- a/package.json
+++ b/package.json
@@ -2,12 +2,13 @@
   "name": "react-online-shop",
   "version": "0.1.0",
   "private": true,
-   "dependencies": {
+  "homepage": "https://ximik-yura.github.io/react-online-shop/",
+  "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
-
+    "gh-pages": "^4.0.0",
     "macro-css": "^1.0.5",
     "node-sass": "6.0",
     "react": "^18.2.0",
@@ -21,7 +22,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
