--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-online-shop",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://ximik-yura.github.io/react-online-shop/",
+  "homepage": "https://ximik-yura.github.io/react-online-shop",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
